<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="8dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LAemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email_ID"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textInputLayout"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LApassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/LAlogin"
        android:layout_width="239dp"
        android:layout_height="68dp"
        android:text="@string/LogMeIn"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textInputLayout2"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/LAforgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgotPassword"
        android:textColor="#0000FF"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/LAlogin"
        android:layout_marginTop="80dp"
        />
</RelativeLayout>