<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity"
    android:padding="8dp">

    <TextView
        android:id="@+id/PAheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChangeYourPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/PAheading"
        android:layout_marginTop="120dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PAoldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CurrentPassword"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textInputLayout8"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PAnewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NewPassword"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textInputLayout9"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PAnewPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NewPasswordAgain"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/PAchangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChangePassword"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textInputLayout10"
        android:layout_marginTop="80dp"/>

</RelativeLayout>